always check default tables for items/blocks