@@ -14,6 +14,7 @@ import com.gregtechceu.gtceu.api.fluids.store.FluidStorageKey;
 import com.gregtechceu.gtceu.api.registry.GTRegistries;
 import com.gregtechceu.gtceu.common.data.GTMaterialBlocks;
 
+import com.gregtechceu.gtceu.common.data.GTMaterialItems;
 import net.minecraft.core.Holder;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.tags.TagKey;
@@ -228,6 +229,7 @@ public class ChemicalHelper {
     }
 
     public static List<ItemLike> getItems(MaterialEntry materialEntry) {
+
         return MATERIAL_ENTRY_ITEM_MAP.computeIfAbsent(materialEntry, entry -> {
             TagPrefix prefix = entry.tagPrefix();
             var items = new ArrayList<Supplier<? extends Item>>();
@@ -236,14 +238,19 @@ public class ChemicalHelper {
                     items.add(itemHolder::value);
                 }
             }
+            if (!items.isEmpty()) return items;
+
+            if (GTMaterialItems.MATERIAL_ITEMS.contains(entry.tagPrefix(), entry.material())) {
+                return Collections.singletonList(Objects.requireNonNull(GTMaterialItems.MATERIAL_ITEMS.get(entry.tagPrefix(), entry.material())));
+            }
             if (GTMaterialBlocks.MATERIAL_BLOCKS.contains(entry.tagPrefix(), entry.material())) {
-                return Collections
-                        .singletonList(Objects.requireNonNull(GTMaterialBlocks.MATERIAL_BLOCKS.get(entry.tagPrefix(), entry.material()))::asItem);
+                return Collections.singletonList(Objects.requireNonNull(GTMaterialBlocks.MATERIAL_BLOCKS.get(entry.tagPrefix(), entry.material()))::asItem);
             }
-            if (items.isEmpty() && prefix.doGenerateItem(entry.material())) {
-                return List.of(() -> prefix.getItemFromTable(entry.material()).get().asItem());
-            }
-            return items;
+
+            Supplier<? extends ItemLike> fromTable = prefix.getItemFromTable(entry.material());
+            if (fromTable != null) return Collections.singletonList(fromTable.get()::asItem);
+            return List.of();
+
         }).stream().map(Supplier::get).collect(Collectors.toList());
     }
 
@@ -287,17 +294,14 @@ public class ChemicalHelper {
                     blocks.add(itemHolder::value);
                 }
             }
-            if (blocks.isEmpty() && prefix.doGenerateBlock(entry.material())) {
-                if (GTMaterialBlocks.MATERIAL_BLOCKS.contains(entry.tagPrefix(), entry.material())) {
-                    return Collections
-                            .singletonList(GTMaterialBlocks.MATERIAL_BLOCKS.get(entry.tagPrefix(), entry.material()));
-                }
-                var blockSupplier = ItemMaterialData.convertToBlock(prefix.getItemFromTable(entry.material()));
-                if (blockSupplier != null) {
-                    return Collections.singletonList(blockSupplier);
-                }
+            if (!blocks.isEmpty()) return blocks;
+
+            if (GTMaterialBlocks.MATERIAL_BLOCKS.contains(entry.tagPrefix(), entry.material())) {
+                return Collections.singletonList(Objects.requireNonNull(GTMaterialBlocks.MATERIAL_BLOCKS.get(entry.tagPrefix(), entry.material())));
             }
-            return blocks;
+            var fromTable = ItemMaterialData.convertToBlock(prefix.getItemFromTable(entry.material()));
+            if (fromTable != null) return Collections.singletonList(fromTable);
+            return List.of();
         }).stream().map(Supplier::get).collect(Collectors.toList());
     }
 
